--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -5,3 +5,5 @@ dataSource.cachePrepStmts=true
 dataSource.prepStmtCacheSize=250
 dataSource.prepStmtCacheSqlLimit=2048
 driverClassName=com.mysql.cj.jdbc.Driver
+username=root
+password=2904
